# circuits

./: .env.template  .gitignore  README.md  pyproject.toml  test_release.sh
circuits/analysis/: circuit_ops.py  cluster.py  process_circuits.py  score_features.py  steer.py  visualization.html
circuits/core/: attribution.py  circuit.py  circuit_template.html  core.py  grad.py  jvp.py  utils.py
circuits/evals/: base.py  enap.py  make_plots.py  nap.py
circuits/utils/: constants.py  coo_utils.py  data_loading_utils.py  descriptions.py  dictionary_loading_utils.py  modeling_utils.py  steering_utils.py
data/wikipedia_datasets/: prompts.jsonl
lib/env_util/env_util/: env.py
lib/neurondb/: pyproject.toml
lib/neurondb/neurondb/: filters.py  postgres.py  view.py
lib/neurondb/neurondb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lib/user_modeling/: pyproject.toml
lib/user_modeling/user_modeling/datasets/: wikipedia.py
lib/util/: pyproject.toml
lib/util/tests/: test_subject.py
lib/util/util/: activations.py  anthropic.py  chat_input.py  dataset.py  gpu.py  json.py  llama3.py  llm_cache.py  minhash.py  openai.py  parallel.py  perplexity.py  prod_llms.py  stat.py  subject.py  sync.py  together.py  types.py
scripts/: __init__.py  eval.py  train.py
scripts/args/: args.py
scripts/case_studies/capitals/: capitals.py  capitals_analysis.py  capitals_test.py
scripts/case_studies/math/: math.py  math_analysis.py
scripts/case_studies/multilingual/: multilingual.py  multilingual_analysis.py
scripts/case_studies/sva/: make_plot.py  sva_analysis.py
scripts/case_studies/user_modelling/: um_analysis.py  user_modelling.py
scripts/fc_evals/: edge_eval.sh  node_eval.sh  pair_combined.sh
sweep/fc_evaluation/: sva_nopair.yaml  sva_nopair_mean.yaml  sva_pair.yaml
